--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 06 22:16:57 EEST 2015
-ndk.dir=/lib/android-sdk-linux/ndk-bundle
-sdk.dir=/lib/android-sdk-linux
+#Fri Oct 09 15:29:32 EEST 2015
+ndk.dir=D\:\\Users\\med_high\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Users\\med_high\\AppData\\Local\\Android\\sdk
