--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.nispok:snackbar:2.6.1'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.prolificinteractive:material-calendarview:1.0.1'
+    compile 'com.squareup:android-times-square:1.6.4@aar'
+    compile 'com.github.alamkanak:android-week-view:1.2.3'
 }
