--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,10 @@
         <activity android:name=".InformationActivity"
             android:theme="@style/AppTheme"
             android:label="@string/information">
+
+        </activity>
+        <activity android:name=".timeChooseFragment.DoctorChooseTimeActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
