--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
 
         </activity>
         <activity android:name=".MainActivity">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".LoginActivity"
@@ -29,10 +32,7 @@
             android:name=".ApointmentsActivity"
             android:theme="@style/AppTheme"
             android:label="@string/appointments_title">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".AppointmentDetailsActivity"
             android:theme="@style/AppTheme"
@@ -51,6 +51,11 @@
         </activity>
         <activity android:name=".timeChooseFragment.DoctorChooseTimeActivity"
             android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".AppointmentConfirmActivity"/>
+        <activity android:name=".survey.SurveyRatingActivity"/>
+        <activity android:name=".news.NewsActivity">
 
         </activity>
     </application>
