--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,16 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
-
+        classpath 'no.nils:wsdl2java:0.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+apply plugin: 'no.nils.wsdl2java'
 
 allprojects {
     repositories {
@@ -20,4 +22,12 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+wsdl2java{
+    wsdlsToGenerate = [
+            ["$projectDir/app/src/main/resources/wsdl/XmlService.wsdl"]
+    ]
+    generatedWsdlDir = file("$projectDir/generatedsources")
+    wsdlDir = file("$projectDir/app/src/main/resources/wsdl")
+    cxfVersion = "3.0.1"
 }
