--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
     }
     productFlavors {
     }
+    dexOptions {
+        incremental false
+    }
 }
 
 dependencies {
@@ -33,6 +36,7 @@ dependencies {
     compile 'com.squareup:android-times-square:1.6.4@aar'
     compile 'com.github.alamkanak:android-week-view:1.2.3'
     compile files('lib/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
+    compile files('lib/robovm-rt-1.3.0-sources.jar')
 }
 android {
     lintOptions {
