--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".search.SearchDoctor">
+        <activity android:name=".search.SearchDoctorActivity">
 
         </activity>
         <activity android:name=".login.MainActivity">
