--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.nispok:snackbar:2.6.1'
-    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:design:23.1.0'
     compile 'com.prolificinteractive:material-calendarview:1.0.1'
     compile 'com.squareup:android-times-square:1.6.4@aar'
     compile 'com.github.alamkanak:android-week-view:1.2.3'
-    compile files('lib/robovm-rt-1.3.0-sources.jar')
     compile files('lib/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
 android {
     lintOptions {
