--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Oct 16 23:55:50 EEST 2015
-ndk.dir=/lib/android-sdk-linux/ndk-bundle
-sdk.dir=/lib/android-sdk-linux
+#Tue Oct 20 16:47:26 EEST 2015
+ndk.dir=D\:\\Users\\med_high\\AppData\\Local\\Android\\sdk\\ndk-bundle
+sdk.dir=D\:\\Users\\med_high\\AppData\\Local\\Android\\sdk
