--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     //compile fileTree(dir: 'lib', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile files('lib/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.nispok:snackbar:2.6.1'
@@ -35,8 +36,8 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.0.1'
     compile 'com.squareup:android-times-square:1.6.4@aar'
     compile 'com.github.alamkanak:android-week-view:1.2.3'
-    compile files('lib/ksoap2-android-assembly-3.5.0-jar-with-dependencies.jar')
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.google.android.gms:play-services:8.1.0'
 }
 android {
     lintOptions {
